--- a/executable_dot_tmux.conf
+++ b/executable_dot_tmux.conf
@@ -11,6 +11,8 @@ bind r source-file ~/.tmux.conf
 unbind q
 bind q kill-pane
 
+unbind v
+unbind '"'
 bind-key - split-window -v
 bind-key / split-window -h
 
@@ -30,18 +32,32 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tpm-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-
 set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
 
-# set -g @plugin 'dracula/tmux'
-# set -g @dracula-show-powerline true
-# set -g @dracula-fixed-location "Stockholm"
-# set -g @dracula-plugins "weather"
-# set -g @dracula-show-flags true
-# set -g @dracula-show-left-icon session
-# set -g @dracula-show-battery true
+# theme plugin
+set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @tokyo-night-tmux_window_id_style digital
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
+set -g @tokyo-night-tmux_show_datetime 0
+set -g @tokyo-night-tmux_date_format YMD
+set -g @tokyo-night-tmux_time_format 24H
+set -g @tokyo-night-tmux_show_music 1
+set -g @tokyo-night-tmux_show_battery_widget 1
+set -g @tokyo-night-tmux_battery_name "BAT1"  # some linux distro have 'BAT0'
+set -g @tokyo-night-tmux_battery_low_threshold 21 # default
+
+# keybinds for sessions switching
+bind-key -n M-0 switch-client -t 0
+bind-key -n M-1 switch-client -t 1
+bind-key -n M-2 switch-client -t 2
+bind-key -n M-3 switch-client -t 3
+bind-key -n M-4 switch-client -t 4
+bind-key -n M-5 switch-client -t 5
+bind-key -n M-6 switch-client -t 6
+bind-key -n M-7 switch-client -t 7
+bind-key -n M-8 switch-client -l 
 
 # config
 set -g status-position top
