--- a/executable_dot_tmux.conf
+++ b/executable_dot_tmux.conf
@@ -5,6 +5,10 @@ set-hook -g after-new-session "source-file .tmux.conf"
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 
+# set-option -g window-size smallest
+# set-option -g status off
+# set-option -g pane-border-status top
+
 # keybinds
 unbind r
 bind r source-file ~/.tmux.conf
@@ -31,9 +35,10 @@ bind-key l select-pane -R
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tpm-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'jimeh/tmuxifier'
 
 # theme plugin
 set -g @plugin "janoamaral/tokyo-night-tmux"
