Tried nvim-java and other conf

--- a/executable_dot_tmux.conf
+++ b/executable_dot_tmux.conf
@@ -34,8 +34,8 @@ bind-key l select-pane -R
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tpm-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'jimeh/tmuxifier'
@@ -62,6 +62,7 @@ bind-key -n M-4 switch-client -t 4
 bind-key -n M-5 switch-client -t 5
 bind-key -n M-6 switch-client -t 6
 bind-key -n M-7 switch-client -t 7
+# switch to last session
 bind-key -n M-8 switch-client -l 
 
 # config
