Cleaning and changed split keybinds

--- a/executable_dot_tmux.conf
+++ b/executable_dot_tmux.conf
@@ -17,8 +17,8 @@ bind q kill-pane
 
 unbind v
 unbind '"'
-bind-key - split-window -v
-bind-key / split-window -h
+bind-key b split-window -v
+bind-key r split-window -h
 
 set -g prefix C-a
 
