Added curr path for splitting panes in tmux

--- a/executable_dot_tmux.conf
+++ b/executable_dot_tmux.conf
@@ -17,8 +17,8 @@ bind q kill-pane
 
 unbind v
 unbind '"'
-bind-key b split-window -v
-bind-key r split-window -h
+bind-key b split-window -v -c "#{pane_current_path}"
+bind-key r split-window -h -c "#{pane_current_path}"
 
 set -g prefix C-a
 
