Added script for running program in seperate pane

--- a/executable_dot_tmux.conf
+++ b/executable_dot_tmux.conf
@@ -20,6 +20,18 @@ unbind '"'
 bind-key b split-window -v -c "#{pane_current_path}"
 bind-key r split-window -h -c "#{pane_current_path}"
 
+# Starts project based on root config file
+bind-key a \
+  split-window -v -c "#{pane_current_path}" \; \
+  send-keys 'if [ -f package.json ] > /dev/null 2>&1; then \
+    ns; \
+  elif [ -f pom.xml ] > /dev/null 2>&1; then \
+    msr; \
+  else \
+    echo "No recognized project file"; \
+  fi' C-m \; \
+  select-pane -U
+
 set -g prefix C-a
 
 
