Editet script for running program with a

--- a/executable_dot_tmux.conf
+++ b/executable_dot_tmux.conf
@@ -22,11 +22,17 @@ bind-key r split-window -h -c "#{pane_current_path}"
 
 # Starts project based on root config file
 bind-key a \
-  split-window -v -c "#{pane_current_path}" \; \
+  split-window -v -l 15 -c "#{pane_current_path}" \; \
   send-keys 'if [ -f package.json ] > /dev/null 2>&1; then \
-    ns; \
+    if [ -f svelte.config.js ] || [ -f svelte.config.cjs ]; then \
+      npm run dev; \
+    else \
+      ns; \
+    fi; \
   elif [ -f pom.xml ] > /dev/null 2>&1; then \
     msr; \
+  elif [ -f build.gradle ] > /dev/null 2>&1; then \
+    gbar; \
   else \
     echo "No recognized project file"; \
   fi' C-m \; \
