--- a/executable_dot_tmux.conf
+++ b/executable_dot_tmux.conf
@@ -91,3 +91,6 @@ set -g mouse on
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+
+#testy spetsy
