--- a/executable_dot_tmux.conf
+++ b/executable_dot_tmux.conf
@@ -52,11 +52,13 @@ bind-key l select-pane -R
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tpm-sensible'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'jimeh/tmuxifier'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # theme plugin
 set -g @plugin "janoamaral/tokyo-night-tmux"
