--- a/executable_dot_tmux.conf
+++ b/executable_dot_tmux.conf
@@ -5,6 +5,8 @@ set-hook -g after-new-session "source-file .tmux.conf"
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 
+set -g @resurrect-capture-pane-contents 'on'
+
 # set-option -g window-size smallest
 # set-option -g status off
 # set-option -g pane-border-status top
@@ -61,7 +63,8 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # theme plugin
-set -g @plugin "janoamaral/tokyo-night-tmux"
+# set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
 set -g @tokyo-night-tmux_window_id_style digital
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_zoom_id_style dsquare
