--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -3,7 +3,7 @@ set-hook -g after-new-session "source-file ~/.tmux.conf"
 
 # trigger restore on startup
 set -g @continuum-restore 'on'
-set -g @continuum-boot 'on'
+set -g @continuum-boot 'off'
 
 set -g @resurrect-capture-pane-contents 'on'
 
@@ -55,7 +55,7 @@ bind-key l select-pane -R
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tpm-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'jimeh/tmuxifier'
@@ -110,8 +110,10 @@ set-option -sg escape-time 10
 set -g mouse on
 
 # Use Vim key bindings.
-setw -g mode-keys vi
 set -g status-keys vi
+
+# list sessions alphabetically
+bind-key s choose-tree -Zs -O name
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
