--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -95,7 +95,8 @@ bind-key -n M-5 switch-client -t 5
 bind-key -n M-6 switch-client -t 6
 bind-key -n M-7 switch-client -t 7
 # switch to last session
-# bind-key -n M-8 switch-client -l 
+bind-key -n M-8 switch-client -l 
+
 bind i switch-client -l
 
 # config
@@ -107,8 +108,15 @@ set -g status-right "#{E:@catppuccin_status_application} #{E:@catppuccin_status_
 # set -g default-terminal "tmux-256color"
 # set -ag terminal-overrides ",xterm-256color:RGB"
 set-option -sg escape-time 10
-set -g mouse on
 
+set -g mouse on
+bind -n WheelUpPane {
+    if -F '#{==:#{window_name},nvim}' {
+        send-keys -M 
+    } {
+        copy-mode -e 
+    }
+}
 # Use Vim key bindings.
 set -g status-keys vi
 
@@ -117,3 +125,4 @@ bind-key s choose-tree -Zs -O name
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
