--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -104,7 +104,7 @@ set -g status-position top
 set -g status-left "" 
 set -g status-right "#{E:@catppuccin_status_application} #{E:@catppuccin_status_session}"
 # set -g status-style bg=default
-# # set-option -g default-terminal "screen-256color"
+ set-option -g default-terminal "screen-256color"
 # set -g default-terminal "tmux-256color"
 # set -ag terminal-overrides ",xterm-256color:RGB"
 set-option -sg escape-time 10
