--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -62,10 +62,6 @@ set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-# theme plugin
-# set -g @plugin "janoamaral/tokyo-night-tmux"
-# set -g @plugin 'fabioluciano/tmux-tokyo-night'
-
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
 set -g @catppuccin_flavor "mocha"
@@ -73,19 +69,8 @@ set -g @catppuccin_window_status_style "rounded"
 set-option -g status-style bg=default
 set -g @catppuccin_status_background "default"
 
-
-# set -g @tokyo-night-tmux_window_id_style digital
-# set -g @tokyo-night-tmux_pane_id_style hsquare
-# set -g @tokyo-night-tmux_zoom_id_style dsquare
-# set -g @tokyo-night-tmux_show_datetime 0
-# set -g @tokyo-night-tmux_date_format YMD
-# set -g @tokyo-night-tmux_time_format 24H
-# set -g @tokyo-night-tmux_show_music 1
-# set -g @tokyo-night-tmux_show_battery_widget 1
-# set -g @tokyo-night-tmux_battery_name "BAT1"  # some linux distro have 'BAT0'
-# set -g @tokyo-night-tmux_battery_low_threshold 21 # default
-
 # keybinds for sessions switching
+# not used atm, same keybinds used by glaze
 bind-key -n M-0 switch-client -t 0
 bind-key -n M-1 switch-client -t 1
 bind-key -n M-2 switch-client -t 2
@@ -94,19 +79,16 @@ bind-key -n M-4 switch-client -t 4
 bind-key -n M-5 switch-client -t 5
 bind-key -n M-6 switch-client -t 6
 bind-key -n M-7 switch-client -t 7
-# switch to last session
-bind-key -n M-8 switch-client -l 
+bind-key -n M-8 switch-client -t 8
 
-bind i switch-client -l
+# switch to last session
+bind g switch-client -l
 
 # config
 set -g status-position top
 set -g status-left "" 
 set -g status-right "#{E:@catppuccin_status_application} #{E:@catppuccin_status_session}"
-# set -g status-style bg=default
  set-option -g default-terminal "screen-256color"
-# set -g default-terminal "tmux-256color"
-# set -ag terminal-overrides ",xterm-256color:RGB"
 set-option -sg escape-time 10
 
 set -g mouse on
