--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -8,7 +8,7 @@ set -g @continuum-boot 'off'
 set -g @resurrect-capture-pane-contents 'on'
 
 # set-option -g window-size smallest
-# set-option -g status off
+set-option -g status off
 # set-option -g pane-border-status top
 
 # keybinds
@@ -88,7 +88,11 @@ bind g switch-client -l
 set -g status-position top
 set -g status-left "" 
 set -g status-right "#{E:@catppuccin_status_application} #{E:@catppuccin_status_session}"
- set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "screen-256color"
+
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 set-option -sg escape-time 10
 
 set -g mouse on
