--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -8,8 +8,11 @@ set -g @continuum-boot 'off'
 set -g @resurrect-capture-pane-contents 'on'
 
 # set-option -g window-size smallest
+
+set -g status-interval 0
 set-option -g status off
-# set-option -g pane-border-status top
+set -g status-position bottom
+set-option -g pane-border-status off
 
 # keybinds
 unbind r
