--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -64,6 +64,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
@@ -114,4 +115,3 @@ bind-key s choose-tree -Zs -O name
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
