--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -6,6 +6,7 @@ set -g @continuum-restore 'on'
 set -g @continuum-boot 'off'
 
 set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
 
 # set-option -g window-size smallest
 
