--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -6,7 +6,6 @@ set -g @continuum-restore 'on'
 set -g @continuum-boot 'off'
 
 set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-strategy-nvim 'session'
 
 # set-option -g window-size smallest
 
@@ -66,6 +65,9 @@ set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'sainnhe/tmux-fzf'
+
+unbind f
+bind-key "f" run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/ses"
 
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
